[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "elaiviaien",email = "skrypnyk.michael@gmail.com"}
]
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "starlette (>=0.46.2,<0.47.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "numpy (>=2.2.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
